Added more foundation to start with REST: - FOSRestBundle and a JMSSerializer - Basic security to avoid CSRF
Added extra DI with JMSDIExtra bundle to mark class as Service and Inject without having to use services.yml

--- a/server/dutils-server/app/config/config.yml
+++ b/server/dutils-server/app/config/config.yml
@@ -73,3 +73,28 @@ swiftmailer:
     username:  "%mailer_user%"
     password:  "%mailer_password%"
     spool:     { type: memory }
+    
+fos_rest:
+    disable_csrf_role: ROLE_API
+    view:
+        formats:
+            json: true
+        view_response_listener: 'force'
+    param_fetcher_listener: true
+    body_listener: true
+    format_listener: true
+    
+sensio_framework_extra:
+    view:
+        annotations: false
+
+jms_di_extra:
+    automatic_controller_injections:
+        properties:
+            request: "@request"
+            router: "@router"
+
+        method_calls:
+            setRouter: ["@router"]
+
+        
