--- a/server/dutils-server/app/config/security.yml
+++ b/server/dutils-server/app/config/security.yml
@@ -10,29 +10,19 @@ security:
         in_memory:
             memory:
                 users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+                    user:  { password: userpass, roles: [ 'ROLE_USER', 'ROLE_API' ] }
+                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN', 'ROLE_API' ] }
 
     firewalls:
         dev:
             pattern:  ^/(_(profiler|wdt)|css|images|js)/
             security: false
 
-        demo_login:
+        login:
             pattern:  ^/demo/secured/login$
             security: false
 
-        demo_secured_area:
-            pattern:    ^/demo/secured/
-            form_login:
-                check_path: _demo_security_check
-                login_path: _demo_login
-            logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
-
-    access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        secured_area:
+            pattern:    ^/api
+            http_basic:
+                realm: "You should have a user name and password"
